Fixed saved search header contrast issue

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -8294,7 +8294,6 @@ a.search-query-link-captions:active {
 
 a.search-query-link-captions:focus {
     font-weight: 600;
-    color: #fff;
 }
 
 .search-query-desc {
